<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMICalculatorAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="your_input">YOUR INPUT</string>
    <string name="your_mass">Your Mass</string>
    <string name="your_height">Your Height</string>
    <string name="your_bmi_info">your_bmi_info</string>
    <string name="your_bmi_info_cap">YOUR BMI INFO</string>
    <string name="bmi_info">BMI Info</string>
    <string name="enter_info">Enter your info first</string>
    <string name="category">Category</string>

</resources>
