<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BMIActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/your_input"
        android:id="@+id/your_input"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        style="?android:attr/listSeparatorTextViewStyle"
        android:hint="@string/your_height"
        android:id="@+id/your_height"
        android:layout_below="@+id/your_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        style="?android:attr/listSeparatorTextViewStyle"
        android:hint="@string/your_mass"
        android:id="@+id/your_mass"
        android:layout_below="@+id/your_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/calculate_button"
        android:layout_below="@+id/your_mass"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/your_mass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/your_bmi_info_cap"
        android:id="@+id/your_bmi_info"
        android:layout_below="@+id/calculate_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:src="@drawable/silhouette_1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bmi_info"
        android:id="@+id/bmi_info"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_info"
        android:id="@+id/your_bmi"
        android:layout_below="@+id/bmi_info"
        android:layout_alignStart="@+id/bmi_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="?android:attr/listSeparatorTextViewStyle"
        android:text="@string/category"
        android:id="@+id/category_info"
        android:layout_below="@+id/your_bmi"
        android:layout_alignStart="@+id/your_bmi"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_info"
        android:id="@+id/your_category"
        android:layout_below="@+id/category_info"
        android:layout_alignStart="@+id/category_info" />


</RelativeLayout>
